# aicore

./: CMakeLists.txt  README  aicore.rar
new/: CMakeLists.txt  basesm.cpp  dectree.cpp  kinematic.cpp  location.cpp  rules.cpp  sm.cpp  steering.cpp  steerpipe.cpp  timing.cpp
new/demos/c03_flocking/: flocking_demo.cpp
new/demos/common/gl/: app.cpp  app.h  main.cpp
src/: action.cpp  aimath.cpp  basesm.cpp  core.cpp  dectree.cpp  kinematic.cpp  learning.cpp  location.cpp  markovsm.cpp  qlearning.cpp  rules.cpp  sm.cpp  steering.cpp  steerpipe.cpp  timing.cpp
src/demos/common/gl/: app.h
